<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/question_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:padding="5dp"
        android:id="@+id/question_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ipsum dolor sit amet question ?" />

    <Button
        android:id="@+id/choice_1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Answer 1"
        />

    <Button
        android:id="@+id/choice_2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Answer 2"
        />

</LinearLayout>