<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/result_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/result_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Result!" />

    <Button
        android:padding="5dp"
        android:id="@+id/close_result"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Back"
        />

</LinearLayout>